--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ ul{
     left: 50%;
     transform: translate(-50%);
     position: relative;
-    background: url(images/bg.jpg) no-repeat center center/cover;
+    background: url(bg.jpg) no-repeat center center/cover;
 }
 .main-header::after{
     content: '';
@@ -44,7 +44,7 @@ ul{
     position: relative;
     height: 600px;
     width: 600px;
-    background: url(images/logo.png) no-repeat center center/cover;
+    background: url(logo.png) no-repeat center center/cover;
     left: 50%;
     transform: translate(-50%);
     z-index: 2;
