--- a/style.css
+++ b/style.css
@@ -1,387 +1,26 @@
-/*imports*/
-@import url('https://fonts.googleapis.com/css2?family=Nunito:italmwght@0,300;0,400;0,600;0,700;0,900;1,400&display=swap');
-/*resets*/
 *{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-html{
-    scroll-behavior: smooth;
-}
-body{
-    font-family: 'Nunito' , sans-serif;
-    background: rgb(255, 255, 255);
-    color: #fff;
-}
-a{
-    text-decoration: none;
-    color: #fff;
-}
-ul{
-    list-style: none;
-}
-/*Header*/
-.main-header{
-    width: 90%;
-    height: 100vh;
-    left: 50%;
-    transform: translate(-50%);
-    position: relative;
-    background: url(bg.jpg) no-repeat center center/cover;
-}
-.main-header::after{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 1;
-}
-.header-top .logo{
-    position: relative;
-    height: 600px;
-    width: 600px;
-    background: url(logo.png) no-repeat center center/cover;
-    left: 50%;
-    transform: translate(-50%);
-    z-index: 2;
-}
-.header-top h3{
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-    text-align: center;
-    font-size: 6rem;
-    margin-bottom: 5rem;
-    color: lime;
-    z-index: 2;
-}
-.header-content{
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.3);
-    color: white;
-    border: 3px solid #f1f1f1;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    width: 80%;
-    padding: 10%;
-    text-align: center;
-    z-index: 2;
-}
-.header-content h1{
-    font-size: 4rem;
-    padding: 20px;
-}
-.header-content p{
-    font-size: 3rem;
-    padding: 20px;
-}
-.btn{
-    display: inline-block;
-    margin-top: 4rem;
-    background: lime;
-    color: #fff;
-    font-size: 2.5rem;
-    text-align: center;
-    border: 0;
-    cursor: pointer;
-    margin-right: 0.5rem;
-    outline: none;
-    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.45);
-    border-radius: 2px;
-    padding: 2rem 5rem;
-    text-transform: uppercase;
-}
-.btn:hover{
-    opacity: 0.9;
-}
-.fa-fw{
-    margin-left: 1rem;
-}
-/*about*/
-.about-section{
-    position: relative;
-    background: rgb(255, 255, 255);
-    height: 100vh;
-}
-.overlay{
-    position: absolute;
-    top: 0;
-    left: 5%;
-    height: 100%;
-    width: 90%;
-    background: lightgreen;
-}
-.left{
-    position: absolute;
-    top: 5%;
-    left: 5%;
-    height: 90%;
-    width: 43%;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    border: 3px solid #f1f1f1;
-    padding: 5%;
-}
-.left h3{
-    font-size: 5rem;
-    color: lime;
-}
-.left p{
-    margin-top: 5rem;
-    font-size: 3rem;
-    padding: 0 5%;
-}
-.right{
-    position: absolute;
-    top: 5%;
-    right: 5%;
-    height: 90%;
-    width: 43%;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    border: 3px solid #f1f1f1;
-    padding: 5%;
-}
-.right h3{
-    font-size: 5rem;
-    color: lime;
-}
-.right p{
-    margin-top: 5rem;
-    font-size: 3rem;
-    padding: 0 5%;
-}
-/*footer*/
-.footer{
-    max-width: 100%;
-    text-align: center;
-    color: white;
-    background-color: black;
+.body-content{
     display: block;
+    height: 100Vh;
+    width: 100vw;
+    background-color: black;
+    display: flex;
+    justify-content: center;
 }
-.footer p{
-    font-size: 3rem;
-    line-height: 4rem;
+.for-content{
+    position: relative;
+    top: 5%;
+    height: 90%;
+    width: 90%;
 }
-@media(max-width: 1440px){
-    .header-top .logo{
-        height: 350px;
-        width: 350px;
-    }
-    .header-top h3{
-        font-size: 4rem;
-        margin-bottom: 5rem;
-    }
-    .header-content{
-        padding: 7.5%;
-    }
-    .header-content h1{
-        font-size: 3.5rem;
-        padding: 7.5px;
-    }
-    .header-content p{
-        font-size: 2.5rem;
-        padding: 7.5px;
-    }
-    .btn{
-        margin-top: 2rem;
-        font-size: 2rem;
-        margin-right: 0.3rem;
-        border-radius: 2px;
-        padding: 1rem 2rem;
-    }
-    .left h3{
-        font-size: 3rem;
-    }
-    .left p{
-        margin-top: 4rem;
-        font-size: 1.5rem;
-    }
-    .right h3{
-        font-size: 3rem;
-    }
-    .right p{
-        margin-top: 4rem;
-        font-size: 1.5rem;
-    }
-    .footer p{
-        font-size: 1.5rem;
-        line-height: 2.5rem;
-    }
-}
-@media(max-width: 1024px){
-    .header-top .logo{
-        height: 175px;
-        width: 175px;
-    }
-    .header-top h3{
-        font-size: 2rem;
-        margin-bottom: 3rem;
-    }
-    .header-content{
-        padding: 6%;
-    }
-    .header-content h1{
-        font-size: 2rem;
-        padding: 6px;
-    }
-    .header-content p{
-        font-size: 1rem;
-        padding: 6px;
-    }
-    .btn{
-        margin-top: 1rem;
-        font-size: 1rem;
-        margin-right: 0.2rem;
-        border-radius: 2px;
-        padding: 0.5rem 0.75rem;
-    }
-    .left h3{
-        font-size: 1.75rem;
-    }
-    .left p{
-        margin-top: 2rem;
-        font-size: 0.75rem;
-    }
-    .right h3{
-        font-size: 1.75rem;
-    }
-    .right p{
-        margin-top: 2rem;
-        font-size: 0.75rem;
-    }
-    .footer p{
-        font-size: 1rem;
-        line-height: 1.5rem;
-    }
-}
-@media(max-width: 768px){
-    .header-top .logo{
-        height: 175px;
-        width: 175px;
-    }
-    .header-top h3{
-        font-size: 2rem;
-        margin-bottom: 3rem;
-    }
-    .header-content{
-        padding: 5.5%;
-    }
-    .header-content h1{
-        font-size: 1.5rem;
-        padding: 5.5px;
-    }
-    .header-content p{
-        font-size: 0.75rem;
-        padding: 5.5px;
-    }
-    .btn{
-        margin-top: 1rem;
-        font-size: 0.75rem;
-        margin-right: 0.2rem;
-        border-radius: 2px;
-        padding: 0.5rem 1.25rem;
-    }
-    .left h3{
-        font-size: 1rem;
-    }
-    .left p{
-        margin-top: 2rem;
-        font-size: 0.75rem;
-    }
-    .right h3{
-        font-size: 1rem;
-    }
-    .right p{
-        margin-top: 2rem;
-        font-size: 0.75rem;
-    }
-    .footer p{
-        font-size: 0.6rem;
-        line-height: 1.5rem;
-    }
-}
-@media(max-width: 425px){
-    .header-top .logo{
-        height: 125px;
-        width: 125px;
-    }
-    .header-top h3{
-        font-size: 1.75rem;
-        margin-bottom: 3rem;
-    }
-    .header-content{
-        padding: 5%;
-    }
-    .header-content h1{
-        font-size: 1.5rem;
-        padding: 5px;
-    }
-    .header-content p{
-        font-size: 0.75rem;
-        padding: 5px;
-    }
-    .btn{
-        margin-top: 1rem;
-        font-size: 0.75rem;
-        margin-right: 0.2rem;
-        border-radius: 2px;
-        padding: 0.5rem 1.25rem;
-    }
-    .left h3{
-        font-size: 0.8rem;
-    }
-    .left p{
-        margin-top: 1rem;
-        font-size: 0.5rem;
-    }
-    .right h3{
-        font-size: 0.8rem;
-    }
-    .right p{
-        margin-top: 1rem;
-        font-size: 0.5rem;
-    }
-    .footer p{
-        font-size: 0.6rem;
-        line-height: 1.5rem;
-    }
-}
-@media(max-width: 375px){
-    .left h3{
-        font-size: 0.7rem;
-    }
-    .left p{
-        margin-top: 1rem;
-        font-size: 0.4rem;
-    }
-    .right h3{
-        font-size: 0.7rem;
-    }
-    .right p{
-        margin-top: 1rem;
-        font-size: 0.4rem;
-    }
-}
-@media(max-width: 320px){
-    .left h3{
-        font-size: 0.6rem;
-    }
-    .left p{
-        margin-top: 1rem;
-        font-size: 0.3rem;
-    }
-    .right h3{
-        font-size: 0.6rem;
-    }
-    .right p{
-        margin-top: 1rem;
-        font-size: 0.3rem;
-    }
+.loading iframe{
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    height: 90%;
+    width: 90%;
 }
